--- a/SisVentas/SisVentas.DataAccessLayer/SisVentas.DataAccessLayer.csproj
+++ b/SisVentas/SisVentas.DataAccessLayer/SisVentas.DataAccessLayer.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="CategoriaDAL.cs" />
     <Compile Include="ClienteDAL.cs" />
+    <Compile Include="PresentacionDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProveedorDAL.cs" />
     <Compile Include="TrabajadorDAL.cs" />
